[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/boc.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Sun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Grass.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Breaker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/cloud1.png" type="Texture" id=7]
[ext_resource path="res://Assets/moondistortion.png" type="Texture" id=8]
[ext_resource path="res://Assets/cloud2.png" type="Texture" id=9]
[ext_resource path="res://Assets/sun.png" type="Texture" id=10]
[ext_resource path="res://Assets/moonspace.png" type="Texture" id=11]
[ext_resource path="res://Assets/citygud.png" type="Texture" id=12]
[ext_resource path="res://Assets/cloud3.png" type="Texture" id=13]
[ext_resource path="res://Assets/moon earth.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Tutorial-E.gd" type="Script" id=15]
[ext_resource path="res://Assets/tree.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sound/EarthPlayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Title.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Fire.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scripts/Tutorial-E2.gd" type="Script" id=20]
[ext_resource path="res://Assets/spaceback.png" type="Texture" id=21]
[ext_resource path="res://Scenes/TouchControls.tscn" type="PackedScene" id=22]

[sub_resource type="TileSet" id=1]
0/name = "sun.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "moon earth.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "moonspace.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "moondistortion.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "cloud1.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 32 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 32, 32 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "cloud2.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 32 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 32, 32 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "cloud3.png 6"
6/texture = ExtResource( 13 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 32 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 32, 32 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[node name="Node2D" type="Node2D"]

[node name="city" type="Sprite" parent="."]
position = Vector2( 512, 304 )
texture = ExtResource( 12 )

[node name="spaceback" type="Sprite" parent="city"]
self_modulate = Color( 1, 1, 1, 0.843137 )
texture = ExtResource( 21 )

[node name="Grass" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 0 )
tile_data = PoolIntArray( -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, 27, 4, 0, 28, 4, 0, 29, 4, 0, 65563, 4, 0, 65564, 4, 0, 65565, 4, 0, 131099, 4, 0, 131100, 4, 0, 131101, 4, 0, 131102, 1, 0, 131103, 1, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 524298, 17, 0, 524299, 17, 0, 524300, 17, 0, 524301, 17, 0, 524302, 17, 0, 524303, 17, 0, 524307, 17, 0, 524308, 17, 0, 524311, 17, 0, 524312, 17, 0, 655385, 17, 0, 655386, 17, 0, 851995, 17, 0, 851996, 17, 0, 1048600, 1, 0, 1048601, 0, 0, 1048605, 17, 0, 1048606, 1, 0, 1048607, 1, 0, 1114135, 1, 0, 1114136, 4, 0, 1114137, 4, 0, 1114142, 4, 0, 1114143, 4, 0, 1179648, 13, 0, 1179649, 13, 0, 1179650, 13, 0, 1179651, 13, 0, 1179652, 13, 0, 1179653, 13, 0, 1179654, 13, 0, 1179655, 13, 0, 1179656, 13, 0, 1179657, 13, 0, 1179658, 13, 0, 1179659, 13, 0, 1179660, 13, 0, 1179661, 13, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 13, 0, 1179667, 12, 0, 1179668, 13, 0, 1179669, 13, 0, 1179670, 13, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 10, 0, 1179675, 10, 0, 1179676, 10, 0, 1179677, 10, 0, 1179678, 10, 0, 1179679, 10, 0 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -1, 0, 0, -65504, 0, 0, 65535, 0, 0, 32, 0, 0, 131071, 0, 0, 65568, 0, 0, 196607, 0, 0, 131104, 0, 0, 262143, 0, 0, 196640, 0, 0, 327679, 0, 0, 262176, 0, 0, 393215, 0, 0, 327712, 0, 0, 458751, 0, 0, 393248, 0, 0, 524287, 0, 0, 458784, 0, 0, 589823, 0, 0, 524320, 0, 0, 655359, 0, 0, 589856, 0, 0, 720895, 0, 0, 655392, 0, 0, 786431, 0, 0, 720928, 0, 0, 851967, 0, 0, 786464, 0, 0, 917503, 0, 0, 852000, 0, 0, 983039, 0, 0, 917536, 0, 0, 1048575, 0, 0, 983072, 0, 0, 1114111, 0, 0, 1048608, 0, 0, 1179647, 0, 0, 1114144, 0, 0, 1245183, 0, 0, 1179680, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0 )

[node name="Breaker" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 216 )

[node name="Goal" parent="." instance=ExtResource( 3 )]
position = Vector2( 992, 48 )

[node name="Miscellaneous" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 4, 1, 0, 65538, 4, 0, 65539, 4, 1, 65558, 5, 0, 65559, 5, 1, 131077, 5, 0, 131078, 5, 1, 196631, 6, 0, 196632, 6, 1 )

[node name="Sun" parent="." instance=ExtResource( 2 )]
position = Vector2( 824, 24 )

[node name="Fire" parent="." instance=ExtResource( 19 )]
position = Vector2( 624, 584 )

[node name="Tutorial" type="Area2D" parent="."]
position = Vector2( 176, 576 )
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="Tutorial"]
texture = ExtResource( 16 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial"]
margin_left = 112.0
margin_top = -472.0
margin_right = 568.0
margin_bottom = -296.0
custom_colors/default_color = Color( 1, 0.572549, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Interact with the Half-Blocks to reach the goal.
Touch the tree if you feel lost. Touch it again if you still feel lost.[/center]"
text = "Interact with the Half-Blocks to reach the goal.
Touch the tree if you feel lost. Touch it again if you still feel lost."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Tutorial"]
wait_time = 7.0
one_shot = true

[node name="Tutorial2" type="Area2D" parent="."]
position = Vector2( 944, 552 )
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Tutorial2"]
visible = false
texture = ExtResource( 16 )

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial2"]
margin_left = -656.0
margin_top = -512.0
margin_right = -200.0
margin_bottom = -336.0
custom_colors/default_color = Color( 1, 0.572549, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial2"]
position = Vector2( 0, -56 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Tutorial2"]
wait_time = 7.0
one_shot = true

[node name="TouchControls" parent="." instance=ExtResource( 22 )]

[node name="Title" parent="." instance=ExtResource( 18 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 272, 560 )

[node name="EarthPlayer" parent="." instance=ExtResource( 17 )]

[connection signal="ready" from="." to="." method="_on_Node2D_ready"]
[connection signal="blocks" from="Grass" to="Player" method="_on_Grass_blocks"]
[connection signal="body_entered" from="Breaker" to="Breaker" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker" to="Player" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Fire" to="Player" method="_on_Fire_body_entered"]
[connection signal="body_entered" from="Tutorial" to="Tutorial" method="_on_Tutorial_body_entered"]
[connection signal="body_exited" from="Tutorial" to="Tutorial" method="_on_Tutorial_body_exited"]
[connection signal="timeout" from="Tutorial/Timer" to="Tutorial" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Tutorial2" to="Tutorial2" method="_on_Tutorial_body_entered"]
[connection signal="body_exited" from="Tutorial2" to="Tutorial2" method="_on_Tutorial_body_exited"]
[connection signal="timeout" from="Tutorial2/Timer" to="Tutorial2" method="_on_Timer_timeout"]
[connection signal="Block" from="Player" to="Grass" method="_on_Player_Block"]
[connection signal="Direction" from="Player" to="Grass" method="_on_Player_Direction"]
[connection signal="Interact" from="Player" to="Grass" method="_on_Player_Interact"]

[editable path="Title"]
